minor tweaks and spacing fixes

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,5 +1,5 @@
 $icon-font-path: '../fonts/';
-
+@import url(https://fonts.googleapis.com/css?family=Open+Sans);
 
 // bower:scss
 @import "bower_components/bootstrap-sass/assets/stylesheets/_bootstrap.scss";
@@ -19,13 +19,13 @@ $card-width: auto;
 
 
 /*---------------------------------------*/
-              
+
 .browserupgrade {
   margin: 0.2em 0;
   background: #ccc;
   color: #000;
-  padding: 0.2em 0;  
-    
+  padding: 0.2em 0;
+
 }
 /*--------------styleguide only----------------*/
 #sections{
@@ -36,7 +36,7 @@ $card-width: auto;
 }
 
 .swatcharea{
-    float:left; 
+    float:left;
     margin:10px;
 }
 
@@ -61,9 +61,9 @@ $card-width: auto;
 /*--------------Responsive: Portrait tablets and up----------------*/
 
 @media screen and (min-width: 768px) {
-  .container {
-    max-width: 730px;
-  }
+  // .container {
+  //   max-width: 730px;
+  // }
 
   /* Remove the padding we set earlier */
   .header,
@@ -78,10 +78,6 @@ $card-width: auto;
     margin-bottom: 30px;
   }
 
-  /* Remove the bottom border on the jumbotron for visual effect */
-  .jumbotron {
-    border-bottom: 0;
-  }
 }
 
 /*---------------------------------------------*/
@@ -94,7 +90,7 @@ body {
   padding-top: 20px;
   padding-bottom: 20px;
   font-family: "Open Sans";
-  color:$text-color;        
+  color:$text-color;
 }
 
 a {
@@ -102,13 +98,6 @@ color:#3bbdfb;
 }
 
 
-/* Everything but the jumbotron gets side spacing for mobile first views */
-.header,
-.marketing,
-.footer {
-  padding-left: 15px;
-  padding-right: 15px;
-}
 
 
 /*----------------Header-----------------------------*/
@@ -136,13 +125,13 @@ color:#3bbdfb;
 /* heading tags */
 h1{
     font-size:60px;
-     
+
 }
 
 .jumbotitle{
     color:white;
     font-weight: 800;
-}   
+}
 
 h2{
     font-size:30px;
@@ -156,15 +145,6 @@ h3 {
 
 }
 
-/* Main marketing message and sign up button */
-.jumbotron {
-    text-align: center;
-    border-bottom: 1px solid #e5e5e5;
-        .btn {
-            font-size: 21px;
-            padding: 14px 24px;
-        }
-}
 
 /* Supporting marketing content */
 .marketing {
@@ -184,13 +164,13 @@ h3 {
     border-radius: 0;
     outline:none;
     box-shadow:none !important;
-    border:1px solid #ccc !important;    
+    border:1px solid #ccc !important;
 }
 
 .form-control:active, .form-control:focus{
     outline:none;
     box-shadow:none !important;
-    border:1px solid #ccc !important;       
+    border:1px solid #ccc !important;
 }
 
 /* Buttons */
@@ -207,18 +187,18 @@ h3 {
     padding-right:100px;
     padding-left:100px;
     border:0;
-    outline:none;   
+    outline:none;
 }
 
 .btn-primary:hover{
     color: #fff;
-    outline:none!important;   
+    outline:none!important;
 }
 
 .btn-primary:focus{
     color: #fff;
     outline:none;
-} 
+}
 
 .btn-primary:active{
     color: #fff;
@@ -226,8 +206,8 @@ h3 {
     background: -o-linear-gradient(#2e9ecf,$primary-color); /* For Opera 11.1 to 12.0 */
     background: -moz-linear-gradient(#2e9ecf,$primary-color); /* For Firefox 3.6 to 15 */
     background: linear-gradient(#2e9ecf,$primary-color); /* Standard syntax (must be last) */
-    outline:none;   
-} 
+    outline:none;
+}
 
 .btn-default{
     color: $text-color;
@@ -252,7 +232,7 @@ h3 {
 .btn-default:focus{
     color:#fff;
     outline:none;
-} 
+}
 
 .btn-default:active{
     color: #fff;
@@ -261,11 +241,11 @@ h3 {
     background: -moz-linear-gradient(#c6c5c5,#dfdcdc); /* For Firefox 3.6 to 15 */
     background: linear-gradient(#c6c5c5,#dfdcdc); /* Standard syntax (must be last) */
     outline:none;
-} 
+}
 
 /* Radio Buttons */
 
-.radio{  
+.radio{
     -webkit-appearance:none;
     width:20px;
     height:20px;
@@ -275,7 +255,7 @@ h3 {
     box-shadow:0 0 5px 0px gray inset;
     float:left;
     margin-right:200px;
-   
+
 }
 
 .radio-toolbar label{
@@ -283,7 +263,7 @@ h3 {
  text-transform: uppercase;
 
 }
-.radio:hover{   
+.radio:hover{
     background-color: $gray-dark;
     outline:none !important;
 }
@@ -292,13 +272,13 @@ h3 {
     display:block;
     width:60%;
     height:60%;
-    margin: 20% auto;    
+    margin: 20% auto;
     border-radius:50%;
     outline:none !important;
 }
 
 .radio:checked{
-    background:$primary-color; 
+    background:$primary-color;
     outline:none !important;
 }
 
@@ -308,44 +288,43 @@ h3 {
 .card{
     background-color: $card-background-color;
     border: $card-border;
-    height: $card-height;
+    // height: $card-height;
     margin: $card-margin;
     padding: $card-padding;
-    width: $card-width;
+    // width: $card-width;
     //box-shadow: 0 2px 10px 0 rgba(0,0,0,.16);
     position:relative;
     border-bottom: 2px solid $primary-color;
     p, h4 {
     margin-left: 15px;
-  }    
-} 
-                   
+    min-width: 25%;
+  }
+}
+
 .image{
     height: $card-height;
-    width: $card-width;    
+    width: $card-width;
 }
 
 textarea{
-    width:100%; 
-    bottom:0px;  
-    background-color: rgba(255, 255, 255, 1); 
-    color:black;      
+    width:100%;
+    bottom:0px;
+    background-color: rgba(255, 255, 255, 1);
+    color:black;
 }
-        
-.title{
-    
-    
-    padding-right:16px;
-    padding-left:16px; 
-}
-        
 
-.summary{
-    
+.title{
     padding-right:16px;
     padding-left:16px;
 }
-   
+
+
+.summary{
+
+    padding-right:16px;
+    padding-left:16px;
+}
+
 
 @keyframes example {
     from {height: 0px;}
@@ -390,4 +369,3 @@ textarea{
   width: 50%;
   }
 }
-
